src/objects/Next_Best_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Next Best Offers</relationshipLabel>
        <relationshipName>Next_Best_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Next Best Offers</relationshipLabel>
        <relationshipName>Next_Best_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tag1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tag1</label>
        <referenceTo>Tag__c</referenceTo>
        <relationshipLabel>Next Best Offers</relationshipLabel>
        <relationshipName>Next_Best_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tag2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tag2</label>
        <referenceTo>Tag__c</referenceTo>
        <relationshipLabel>Next Best Offers (Tag2)</relationshipLabel>
        <relationshipName>Next_Best_Offers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tag3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tag3</label>
        <referenceTo>Tag__c</referenceTo>
        <relationshipLabel>Next Best Offers (Tag3)</relationshipLabel>
        <relationshipName>Next_Best_Offers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Next Best Offer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Next Best Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Next Best Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>